src/objects/Data_Quality_Process__c.object
<CustomObject>
    <description>Used for agent case quality scoring.</description>
    <fields>
        <fullName>AE_Captured__c</fullName>
        <label>AE Captured</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Adverse_Event_Notes__c</fullName>
        <label>Adverse Event Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agent</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Data_Quality_Processes1_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Auditor_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the auditor</description>
        <label>Auditor Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Data_Quality_Processes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Blank_Feilds__c</fullName>
        <label>Blank Feilds</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Listened_To__c</fullName>
        <description>Does not factor in scoring.</description>
        <inlineHelpText>Does not factor in scoring.</inlineHelpText>
        <label>Call Listened To</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Summary_Notes__c</fullName>
        <label>Case Summary Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Case_Summary__c</fullName>
        <label>Case Summary</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <description>The case that the DQP Score is on.</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Data Quality Process</relationshipLabel>
        <relationshipName>Data_Quality_Process</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Comment_Code_Notes__c</fullName>
        <label>Comment Code Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comment_Codes__c</fullName>
        <label>Comment Codes</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Critical_Complaint_Captured__c</fullName>
        <label>Critical Complaint Captured</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Critical_Complaints_Notes__c</fullName>
        <label>Critical Complaints Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DQP_Results_Calibrated__c</fullName>
        <description>To be completed by second review only - to calibrate scores</description>
        <inlineHelpText>To be completed by second review only - to calibrate scores</inlineHelpText>
        <label>DQP Results Calibrated</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                    <label>N/A</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Denominator__c</fullName>
        <formula>IF(
OR(
(((TEXT(AE_Captured__c)) = &apos;no&apos;)),(TEXT(Critical_Complaint_Captured__c))=&apos;no&apos;) , 1,
(IF(TEXT(Comment_Codes__c) = &apos;N/A&apos;, 0, 20)) +
(IF(TEXT(Local_Products__c) = &apos;N/A&apos;, 0, 20)) +
(IF(TEXT(Probe_Safety_Assessment__c) = &apos;N/A&apos;, 0, 20)) +
(IF(TEXT(Probe_Survey__c) = &apos;N/A&apos;, 0, 7.5)) +
(IF(TEXT(Production_Code__c) = &apos;N/A&apos;, 0, 5)) +
(IF(TEXT(Case_Summary__c) = &apos;N/A&apos;, 0, 20)) +
(IF(TEXT(Used_same_version_before__c) = &apos;N/A&apos;, 0, 2.5)) +
(IF(TEXT(Where_Bought__c) = &apos;N/A&apos;, 0, 2.5)) +
(IF(TEXT(Expiration_Date__c) = &apos;N/A&apos;, 0, 2.5))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Denominator</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expiration_Date_Notes__c</fullName>
        <label>Expiration Date Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Final_Score_Notes__c</fullName>
        <label>Final Score Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Final_Score__c</fullName>
        <formula>IF( Blank_Feilds__c = &apos;TRUE&apos;, 0,(Numerator__c / Denominator__c)*100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inspection_Type__c</fullName>
        <label>Inspection Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sample</fullName>
                </value>
                <value>
                    <fullName>Prediction Model</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Unable to Complete - Language</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Local_Product_Notes__c</fullName>
        <label>Local Product Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Local_Products__c</fullName>
        <label>Local Products</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Numerator__c</fullName>
        <formula>IF(
OR(
(((TEXT(AE_Captured__c)) = &apos;no&apos;)),(TEXT(Critical_Complaint_Captured__c))=&apos;no&apos;) , 0,
(IF(TEXT(Comment_Codes__c) = &apos;N/A&apos;, 0, VALUE(TEXT(Comment_Codes__c)))*IF(TEXT(Comment_Codes__c) = &apos;N/A&apos;, 0, 0.20)) +
(IF(TEXT(Local_Products__c) = &apos;N/A&apos;, 0, VALUE(TEXT(Local_Products__c)))*IF(TEXT(Local_Products__c) = &apos;N/A&apos;, 0, 0.20)) +
(IF(TEXT(Probe_Safety_Assessment__c) = &apos;N/A&apos;, 0, VALUE(TEXT(Probe_Safety_Assessment__c)))*IF(TEXT(Probe_Safety_Assessment__c) = &apos;N/A&apos;, 0, 0.20)) +
(IF(TEXT(Probe_Survey__c) = &apos;N/A&apos;, 0, VALUE(TEXT(Probe_Survey__c)))*IF(TEXT(Probe_Survey__c) = &apos;N/A&apos;, 0, 0.075)) +
(IF(TEXT(Production_Code__c) = &apos;N/A&apos;, 0, VALUE(TEXT(Production_Code__c)))*IF(TEXT(Production_Code__c) = &apos;N/A&apos;, 0, 0.05)) +
(IF(TEXT(Case_Summary__c) = &apos;N/A&apos;, 0, VALUE(TEXT(Case_Summary__c)))*IF(TEXT(Case_Summary__c) = &apos;N/A&apos;, 0, 0.20)) +
(IF(TEXT(Used_same_version_before__c) = &apos;N/A&apos;, 0, VALUE(TEXT(Used_same_version_before__c)))*IF(TEXT(Used_same_version_before__c) = &apos;N/A&apos;, 0, 0.025)) +
(IF(TEXT(Where_Bought__c) = &apos;N/A&apos;, 0, VALUE(TEXT(Where_Bought__c)))*IF(TEXT(Where_Bought__c) = &apos;N/A&apos;, 0, 0.025)) +
(IF(TEXT(Expiration_Date__c) = &apos;N/A&apos;, 0, VALUE(TEXT(Expiration_Date__c)))*IF(TEXT(Expiration_Date__c) = &apos;N/A&apos;, 0, 0.025)) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Numerator</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Probe_Safety_Assessment_Notes__c</fullName>
        <label>Probe – Safety Assessment Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Probe_Safety_Assessment__c</fullName>
        <label>Probe - Safety Assessment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Probe_Survey_Notes__c</fullName>
        <label>Probe - Survey Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Probe_Survey__c</fullName>
        <label>Probe - Survey</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Production_Code_Notes__c</fullName>
        <label>Production Code Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Production_Code__c</fullName>
        <label>Production Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Used_Same_Version_Before_Notes__c</fullName>
        <label>Used Same Version Before Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Used_same_version_before__c</fullName>
        <label>Used same version before?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Where_Bought_Notes__c</fullName>
        <label>Where Bought Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Where_Bought__c</fullName>
        <label>Where Bought</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Data Quality Process</label>
    <listViews>
        <fullName>Angie_View_2</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Final_Score__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Case_Summary_Notes__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Angie View 2</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>DQP-{0000000}</displayFormat>
        <label>Data Quality Process Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Quality Processes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>